--- a/src/app/home/subscribe/subscribe.component.html
+++ b/src/app/home/subscribe/subscribe.component.html
@@ -37,51 +37,35 @@
 </div>
 <br> -->
 
-<br>
 <div class="container">
-<div class="jumbotron gridJump">
-        <h1 class="subs">Get Discount Info</h1>
-        <p class="tagp">
-                Subscribe to the Outstock mailing list to
-                receive updates on
-                new arrivals, special
-                offers and other discount
-                information.</p>
-    <div class="row">
-        <div class="col-md-4">            
-<!--                 <p class="tagp">
-                    Subscribe to the Outstock mailing list to
-                    receive updates on
-                    new arrivals, special
-                    offers and other discount
-                    information.</p> -->
-        </div>
-        <div class="col-md-4" style="margin-bottom: 1px;">
-            <form>
-                <div class="form-group">
-                    <label for="comment"></label>
-                    <textarea class="form-control" rows="5" id="comment"
-                        placeholder="Subscribe to our newsletter"></textarea>
-                    <br>
-           
-                    <div class="button" style="padding-right: 30px;">
-                        <div class="row">
-                            <div class="col-md-4"></div>
-                            <div class="col-md-4" style="padding-right: 40px;">
-                                    <div class="icon-fab">
-                                            <button class="button button5"> <b>Submit</b>  </button>
-                                       <!--      <div mat-stroked-button  class="btnn" (click)="addToCart(product)">
-                                         Submit <i class="fa fa-cart-plus fa-1x" aria-hidden="true"></i> </div> -->
-                                          </div>  
+    <div class="jumbotron subsJumb">
+        <h1 class="subsContent">Get Discount Info</h1>
+        <p class="subsPara">
+            Subscribe to the Outstock mailing list to
+            receive updates on
+            new arrivals, special
+            offers and other discount
+            information.</p>
+        <div class="row">
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6">
+                <form>
+                    <div class="form-group">
+                        <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Enter Your ID" >
+                          </mat-form-field>
+                        <div class="button">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div type="button" class="btn-sm"><b>Submit</b></div>
+                                </div>
                             </div>
-                            <div class="col-md-4"></div>
                         </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
+            <div class="col-md-3"></div>
         </div>
-        <div class="col-md-4"></div>
     </div>
 </div>
-</div>
-<br>
