--- a/src/app/account-info/registration/registration.component.css
+++ b/src/app/account-info/registration/registration.component.css
@@ -1,20 +1,75 @@
-.highwa{
-    height: 380px;
-    width: 400px;
-   
-}
-.registerCard{
-    
-    padding-left: 80px;
-    padding-top: 30px;
-    
-}
-.registerButton{
-    background: rgb(126, 126, 126);
+.cartHeader {
+    padding-top: 2%;
+    font-weight: 500;
+    text-align: center;
+    color: darkred;
+    font-size: 23px;
+  
+  }
+  
+  
+  .registerSetup {
+    margin-bottom: 5%;
+  }
+  
+  .registerCard {
+    margin: 3%;
+    border-radius: 0;
+    box-shadow: 0 0 4px rgba(40, 44, 63, 0.08);
+    border: 1px solid #eaeaec;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: 0 88px 550px 0.5px rgba(218, 218, 218, 0.884) , 0 0.5px 0px 0 rgba(0, 0, 0, .19);
+    background: rgb(255, 255, 255);
+    /* border: black 1px solid; */
+  
+  
+  }
+  .registerButton {
     width: 200px;
-   
-   
-}
-.regis-btn{
-    padding-top: 15px;
-}
+    background: darkred;
+    color: rgb(255, 255, 255);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    height: 50px;
+  
+  }
+  
+  
+  .registerButton {
+    background-color: #FFFA51!important;
+    color: darkred; 
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    display: block;
+    width: 100%;
+    text-transform: uppercase;
+    border: 6px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: 0.5px solid rgb(39, 39, 39);
+  
+  }
+  
+  .displayNone {
+    display: none;
+  }
+  
+  .displayBlock {
+    display: block;
+  }
+  
+  .registerButtons{
+    /*  background-color: #4C95FF !important; */
+    color: rgb(228, 228, 228); 
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    display: block;
+    width: 100%;
+    text-transform: uppercase;
+    border: 6px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: 0px 0px 0px 0px;
+    border: 0.5px solid rgb(39, 39, 39);
+    border-radius: 30px;
+  }
