--- a/src/app/account-info/registration/registration.component.html
+++ b/src/app/account-info/registration/registration.component.html
@@ -3,7 +3,6 @@
     <div class="col-md-4">
 
     </div>
-    <mat-card class="highwa">
     <div class="col-md-4 registerCard">
       {{holder?.result }}
       <h5 class="cartHeader">Signup</h5>
@@ -29,7 +28,7 @@
         <div class="col-md-12">
           <mat-form-field>
             <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" formControlName="password" required>
+            <input matInput placeholder="Password" type="password" formControlName="password" required>
             <button mat-button matSuffix mat-icon-button aria-label="User Name">
               <mat-icon>remove_red_eye</mat-icon>
             </button>
@@ -41,15 +40,15 @@
         </div>
         <div class="col-md-12">
           <div class="regis-btn">
-          <button class="registerButton" mat-stroked-button  type="submit">Register</button>
-        </div>
+            <button mat-raised-button color="primary" class="registerButtons" type="submit">Register</button>
+          </div>
         </div>
       </div>
     </div>
-  </mat-card>
     <div class="col-md-4">
 
     </div>
 
   </div>
-  </form>
+  
+</form>
