--- a/src/app/account-info/signin/signin.component.css
+++ b/src/app/account-info/signin/signin.component.css
@@ -1,35 +1,76 @@
-.login-card{
-    width: 480px;
-      padding-left: 40px;
-      box-shadow: 0 1px 58px 0 #00000033, 0 1px 2px 0 rgba(0, 0, 0, .19);
-      margin-bottom: 50px;
-      background: rgb(255, 255, 255);
-      height: 350px;
-    }
-    .registerCard{
-        padding-left: 90px;
-        padding-top: 60px;
-    }
-    .login{
-        padding-left: 4px;
-        padding-top: 20px;
-    }
-    .raised{
-        width: 200px;
-        background: rgb(122, 122, 122);
-        color: black;
-    }
-    
-    .registerButton{
-        box-shadow: 0 1px 28px 0 #00000063, 0 1px 2px 0 rgba(0, 0, 0, .19);
-        background-color: rgb(156, 155, 155);
-        margin-bottom: 10px;
-        width: 120px;
-        font-size: 14px;
-        height: 40px;
-        text-align: center;
-        padding-top: 10px;
-        font-weight: bolder;
-        color: rgb(0, 0, 0);
-    }
-    
+.cartHeader {
+    padding-top: 2%;
+    font-weight: 500;
+    text-align: center;
+    color: darkred;
+    font-size: 23px;
+  
+  }
+  
+  
+  .registerSetup {
+    margin-bottom: 5%;
+  }
+  
+  .registerCard {
+    margin: 3%;
+    border-radius: 0;
+    box-shadow: 0 0 4px rgba(40, 44, 63, 0.08);
+    border: 1px solid #eaeaec;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: 0 1px 50px 1px rgba(186, 201, 223, 0.281) , 0 1px 2px 0 rgba(0, 0, 0, .19);
+    border: rgb(207, 207, 207) 1px solid;
+  
+  
+  }
+  .registerButton {
+    width: 200px;
+    background: darkred;
+    color: rgb(255, 255, 255);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    height: 50px;
+  
+  }
+  
+  
+  .registerButton {
+   /*  background-color: #4C95FF !important; */
+    color: rgb(228, 228, 228); 
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    display: block;
+    width: 100%;
+    text-transform: uppercase;
+    border: 6px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: 0px 0px 0px 0px;
+    border: 0.5px solid rgb(39, 39, 39);
+    border-radius: 30px;
+  }
+  .registerButtons{
+     /*  background-color: #4C95FF !important; */
+     color: rgb(228, 228, 228); 
+     font-size: 18px;
+     font-weight: 500;
+     letter-spacing: 2px;
+     display: block;
+     width: 100%;
+     text-transform: uppercase;
+     border: 6px;
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     border: 0px 0px 0px 0px;
+     border: 0.5px solid rgb(39, 39, 39);
+     border-radius: 30px;
+  }
+  
+  .displayNone
+   {
+    display: none;
+  }
+  
+  .displayBlock 
+  {
+    display: block;
+  }
