--- a/src/app/account-info/signin/signin.component.html
+++ b/src/app/account-info/signin/signin.component.html
@@ -1,9 +1,7 @@
 <form [formGroup]="signInForm" (ngSubmit)="!signInForm.invalid && onSubmit()" novalidate style="padding-top:40px">
   <div class="row">
     <div class="col-md-4">
-
     </div>
-    <div class="login-card">
     <div class="col-md-4 registerCard">
       <h5 class="cartHeader">Login</h5>
       <div class="row registerSetup">
@@ -24,7 +22,7 @@
         <div class="col-md-12">
           <mat-form-field>
             <mat-label>Password</mat-label>
-            <input matInput placeholder="Password" formControlName="password" required>
+            <input matInput placeholder="Password" formControlName="password" type="password" required>
             <button mat-button matSuffix mat-icon-button aria-label="User Name">
               <mat-icon>remove_red_eye</mat-icon>
             </button>
@@ -35,15 +33,14 @@
           </mat-form-field>
         </div>
         <div class="col-md-12">
-          <div class="login">
-          <button class="registerButton" color="primary" type="submit" class="raised">Login</button>
-        </div>
+          <div class="regis-btn">
+            <button mat-raised-button color="primary" class="registerButtons" type="submit">Login</button>
+            <!-- <button mat-button>Click me!</button> -->
+          </div>
         </div>
       </div>
     </div>
-    </div>
     <div class="col-md-4">
-
     </div>
   </div>
 </form>
