--- a/src/app/home/ads/ads.component.html
+++ b/src/app/home/ads/ads.component.html
@@ -1,6 +1,10 @@
 <div class="container">
-  <div class="img-fluid" >
-    <h3> The Best Furniture Range</h3>
-      <img [src]="adsModel[0].adsImageName" class="img-fluid">
+  <div class="row">
+    <div class="col-md-12 col-12 col-12 col-xs-12">
+      <div class="adsCover">
+        <h3 class="adsRange">The Best Furniture Range</h3>
+        <img [src]="adsModel[0].adsImageName" class="adsImage">
+      </div>
+    </div>
   </div>
 </div>
