--- a/src/app/home/category-content/category-content.component.html
+++ b/src/app/home/category-content/category-content.component.html
@@ -22,15 +22,14 @@
   </div>
   </div>
 </div> -->
-
-<div class="container gridCon">
-  <h3>Explore Our Furniture Range</h3>
-  <div class="row">
-    <div class="col-md-2 col-6" *ngFor="let category of categoryModel" style="padding-left: 20px;">
-      <div class="cat-img">
-        <img [src]="category.categoryImageName" class="img-fluid">
+<h3 class="furnitureRange">Explore Our Furniture Range</h3>
+ <div class="container">
+    <div class="row">
+      <div class="col-lg-3 col-3 " *ngFor="let category of categoryModel" > 
+        <div class="categoryCover">     
+          <img [src]="category.categoryImageName" class="categoryImage ">
+        </div>
+          <p class="categoryName">{{category.categoryName}}</p>
       </div>
-      <h6>{{category.categoryName}}</h6>
     </div>
   </div>
-</div>
