--- a/src/app/home/promotion1/promotion1.component.html
+++ b/src/app/home/promotion1/promotion1.component.html
@@ -1,18 +1,20 @@
-<div class="promotion1"> 
-  <h1 class="our-h1"><h3>{{promotionsModel[0]?.promotionTitle}}</h3></h1>
-  <br>
-  <div>
+<div class="promotion-One"> 
+  <div class="container-fluid">
+    <div class="nameCoverag">
+  <h3 class="promotionNam">{{promotionsModel[0]?.promotionTitle}}</h3>
+     </div>
     <div class="row gridImg">
-      <div class="col-md-3 col-3 names" *ngFor="let data of promotionsModel[0]?.joinedtable" >
+      <div class="col-md-3 col-3 names" *ngFor="let data of promotionsModel[0]?.joinedtable">
         <div class="promoImg" >
+          <div class="card">
         <img [src]="data?.productImageName[0]"  class="img-responsive">
       </div>
-      <h6 class="proName">  {{data.productName}}</h6>
-        <br>
-       <h6>₹ {{data.price}}  </h6>
+      </div>
+      <h5 class="productName">  {{data.productName}}</h5>
+       <h6 class="productPrize">? {{data.price}}  </h6>
       </div>
     </div>
-  </div>
+  </div> 
 </div>
 
 <!-- <div *ngFor="let promotion of promotionsModel">
