--- a/src/app/product-management/product-detail/product-detail.component.html
+++ b/src/app/product-management/product-detail/product-detail.component.html
@@ -1,32 +1,27 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-4 col-lg-6">
-      <div class="row" >
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="padding-top: 20px; width: 100%;">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 deTail">
           <div class="mat-big">
-            <div *ngIf="!primeHide">
-              <div class="zoom">
-             
-                <img [src]="productModel?.productImageName[0]" class="img-responsive">
+            <div *ngIf="!primeHide" class="deImgcover">
+              <div class="zooms">
+                <img [src]="productModel?.productImageName[0]" class="detailImg">
               </div>
             </div>
-            <div *ngIf="showImages">
+            <div *ngIf="showImages" class="deImgcover">
               <div class="zoom1">
-                <img [src]="selectedImg" class="img-responsive">
+                <img [src]="selectedImg" class="detailImgs">
               </div>
             </div>
           </div>
           <br>
         </div>
-
-        
         <div class="col-3 col-sm-3 col-md-3 col-lg-2" *ngFor="let data of productModel?.productImageName" class="small">
-          <button mat-button [ngClass]="{'activeImg' : selectedSmallImg === data}" class="ras-btn"><a><img
-                (mouseover)="clickImg(data)" [src]="data" class="img-fluidsss"></a>
+          <button mat-button [ngClass]="{'activeImg' : selectedSmallImg === data}" class="smallbtn"><a>
+              <img (mouseover)="clickImg(data)" [src]="data" class="smallImg"></a>
           </button>
         </div>
-
-
       </div>
     </div>
     <div class="col-12 col-sm-12 col-md-8 col-lg-6 detailsView">
@@ -34,26 +29,3 @@
       </app-product-detail-view>
     </div>
   </div>
-  <br>
-  <div class="row gridRow">
-   <!--  <div class="col-12 col-md-12 col-lg-12">
-      <div class="var-btnn">
-        
-          <h2 class="relatedSection">Similar Products</h2>
-        
-      </div>
-    </div> -->
-    <div class="col-6 col-sm-3 col-md-3 col-lg-2 pointerImage" *ngFor="let data of relatedProducts">
-      <div class="card-var">
-        <a (click)="relatedProduct(data)">
-          <button mat-flat-button class="vat-btn">
-            <div class="zoom2">
-              <img class="img-fluid" [src]="data.productImageName[0]">
-            </div>
-          </button>
-        </a>
-      </div>
-      {{data.productTitle}}
-    </div>
-  </div>
-</div>
