--- a/src/app/product-management/product-list/product-list.component.html
+++ b/src/app/product-management/product-list/product-list.component.html
@@ -1,79 +1,57 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="container-fluid">
-      <mat-paginator [length]="totalSize" [hidePageSize]="true" [pageIndex]="currentPage"></mat-paginator>
-      <div *ngIf="productModel$ | async as id">
-          <div class="row">
-            <div class="col-md-12">
-              <nav class="nav">
-                <a class="nav-link "><b>Sort By</b></a>
-                <div *ngFor="let data of sortBy">
-                  <li class="nav-link " [class.selectedSort]="data.type === selectedSortVal" (click)="sortType(data.type)">
-                    <b>{{data.value}}</b></li>
-                </div>
-              </nav>
-            </div>
-            </div>
-
-        <div class="row">
-          <!-- List of Products -->
-          <div class="col-md-4" *ngFor="let product of productModel">
-            <div class="card-control" >
-              <div class="mtss">
-              
-                <div> 
-                  <div class="zoom">
-                    <img class="img-fluid" alt="smaple image" [src]="product.productImageName[0]" (click)="viewSingleProduct(product._id)">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-12">
+        <mat-paginator [length]="totalSize" [hidePageSize]="true" [pageIndex]="currentPage"></mat-paginator>
+        <div *ngIf="productModel$ | async as id">
+            <div class="row">
+              <div class="col-md-12 col-12">
+                <nav class="nav">
+                  <a class="nav-link "><p class="sortBy">Sort By</p></a>
+                  <div *ngFor="let data of sortBy">
+                    <li class="nav-link " [class.selectedSort]="data.type === selectedSortVal" (click)="sortType(data.type)">
+                      <p class="lowTohigh">{{data.value}}</p></li>
                   </div>
-                  <div class="car-body">
-                    <h4 class="card-title">{{ product.productName }}</h4>
-                    <div>
-                      <p class="card-text"><i class="fa fa-inr" aria-hidden="true"></i> ₹{{ product.price }} </p>  
-                    </div>
-                  </div>
-               <!-- <div class="car-body">
-                    <h4 class="card-title">{{ product.productName }}</h4>
-                    <div>
-                      <p class="card-text"><i class="fa fa-inr" aria-hidden="true"></i> {{ product.price }}</p>
-                    </div>
-                  </div> -->
-                </div>
-                <div class="but-cart" >
-                  <div class="row">
-                    <div class="col-md-5">
-                        <div class="Detail-Views">
-                            <div  mat-stroked-button  class="Detail-View" (click)="viewSingleProduct(product._id)">Detail View</div>
-                          </div>
-                    </div>
-                    <div class="col-md-7" >
-                        <div class="icon-fab">
-                            <div mat-stroked-button  class="btnn" (click)="addToCart(product)">
-                          Add to Cart <i class="fa fa-cart-plus fa-1x" aria-hidden="true"></i> </div>
-                          </div>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- <p class="card-text">{{ product.color }}</p> -->
-                <!--                   <div>
-                    <p class="card-text">{{ product.material }}</p>
-                  </div> -->
-
+                </nav>
               </div>
-            
+              </div>
+          <div class="row">
+            <!-- List of Products -->
+            <div class="col-md-4" *ngFor="let product of productModel">
+              <div class="card-control" >
+                <div class="productDiv">
+                    <div class="zoom">
+                      <img class="prolist-Img"  alt="img-thumbnail" [src]="product.productImageName[0]" (click)="viewSingleProduct(product._id)">
+                    </div>
+                    <div class="car-body">
+                      <h4 class="listproName">{{ product.productName }}</h4>
+                      <div>
+                        <p class="listproPrize">? {{ product.price }}</p>  
+                      </div>
+                    </div>
+                  <div class="but-cart" >
+                    <div class="row" >
+                      <div class="col-md-6 col-6" >
+                              <div  mat-stroked-button  class="detail-View" (click)="viewSingleProduct(product._id)">Detail View</div>         
+                      </div>
+                      <div class="col-md-6 col-6" >
+                              <div mat-stroked-button  class="detail-View" (click)="addToCart(product)">
+                            Add to Cart 
+                           </div>
+                      </div>
+                    </div>
+                  </div>             
+                </div>          
+              </div>
             </div>
+            <div class="col-sm-6"></div>
+          </div>        
+          <div class="page-na">
+            <mat-paginator #paginator [pageSize]="pageSize" [hidePageSize]="true" [pageSizeOptions]="[10, 100, 150]"
+              [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)"
+              class="paginator">
+            </mat-paginator>
           </div>
-          <div class="col-sm-6"></div>
         </div>
-
-        
-        <div class="page-na">
-          <mat-paginator #paginator [pageSize]="pageSize" [hidePageSize]="true" [pageSizeOptions]="[10, 100, 150]"
-            [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)"
-            class="paginator">
-          </mat-paginator>
-        </div>
-      </div>
     </div>
   </div>
-</div>
+  </div>
