--- a/src/app/shared/category/category.component.html
+++ b/src/app/shared/category/category.component.html
@@ -35,18 +35,16 @@
     </ul>
   </div>
 </nav> -->
+
 <nav class="navbar  navbar-expand-lg   border-dark navbar-light bg-light" >
   <a class="navbar-brand d-sm-none d-md-none d-xs-block" href="#">Category</a>
-  <div class="fixed-top">
-    <!-- <a href="https://wa.me/918675451008"><img src="../../../assets/img/whatsapp (1).png" class="whatsApp"></a>  -->
-  </div>
   <button class="navbar-toggler" type="button" (click)="toggleNavbar()"
    data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" 
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" 
+  <div class="collapse navbar-collapse" id="navbarSupportedContent"  
   [ngClass]="{'show': navbarShow}">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
@@ -59,7 +57,7 @@
        <h6 class="subMenus"> {{ cat.categoryName | titlecase}}</h6>
         </a>
         <div *ngIf="cat._id === selectedDropDown" (mouseleave)="toggleDropdownLeave(cat)" class="row">
-          <div class="dropdown-menu" [ngClass]="{'show': cat._id === selectedDropDown}">
+          <div class="dropdown-menu categoryMenu" [ngClass]="{'show': cat._id === selectedDropDown}">
             <li *ngFor="let subcat of cat.mainCategory" (mouseenter)="toggleDropdown(cat)">
               <a class="dropdown-item gridIss" (click)="viewCategory(subcat._id)"   [class.selected]="subcat === selected" ><h6 class="subMenu">{{subcat.mainCategoryName | titlecase}}</h6></a>
             </li>
@@ -69,3 +67,10 @@
     </ul>
   </div>
 </nav>
+
+
+<!-- <div class="fixed-top">
+    <a href="https://wa.me/918675451008">
+      <img src="../../../assets/img/whatsapp (1).png" class="whatsApp-icon">
+    </a> 
+  </div> -->
