--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,33 +1,31 @@
 .footers a {
-    color: #818181;
-  }
+  color: #818181;
+}
+
+.footers p {
+  color: #272727;
+}
+
+.footers ul {
+  line-height: 30px;
+}
+
+.footers {
+  margin-top: 0px;
+  background-image: url(../../../assets/img/footer/images.jpg) !important;
+  border-top: #b4b4b4 2px solid;
   
-  .footers p {
-    color: #272727;
-  }
-  
-  .footers ul {
-    line-height: 30px;
-  }
-  
-  .footers {
-    margin-top: 20px;
-    background-color: #f5f5f5 !important;
-  }
-  
-  .img-fluid {
-    width: 70px;
-    height:30px;
-  }
-  a{
-      text-decoration: none;
-  }
-  .imgTele{
-    width: 15px;
-    padding: 2px;
-  }
-  .imgTel{
-    width: 28px;
-    color: red;
-  
-  }
+}
+
+a{
+    text-decoration: none;
+}
+.imgTele{
+  width: 15px;
+  padding: 2px;
+}
+.imgTel{
+  width: 28px;
+  color: red;
+
+}
