--- a/src/app/home/promotion2/promotion2.component.html
+++ b/src/app/home/promotion2/promotion2.component.html
@@ -1,41 +1,19 @@
-<!-- <div class="row">
-  <div class="col-md-4 gridPro">
-   
-  </div>
-  <div class="col-md-4">
-    <div class="hot-h1">
-        
-        <h2> HOT PRODUCTS</h2>
+
+<div class="p-2 subHeader">
+    <div class="nameCoverage">
+        <h3 class="promotionName">{{promotionsModel[1]?.promotionTitle}}</h3>
     </div>
-  </div>
-
-  <div class="col-md-4">
-    <div class="hot-h1"></div>
-
-  </div>
-</div>
-<div class="container ">
-  <div class="row gridIm">
-    <div class="col-md-6">
-      <img [src]="productsModel[0].adsImageName" class="img-fluid">
+  <span></span></div>
+<div class="row parent">
+  <app-carousel-item>
+   <div appCarouselItem class="col-md-3 col-lg-3 col-xl-3 col-6" 
+    *ngFor="let data of promotionsModel[1]?.joinedtable">
+      <a (click)="detailView(data._id)"><img [src]="data.productImageName[0]" class="img-fluid"></a>
+      <p>{{data.productName}}</p>
+      <p><span>&#x20B9;</span>{{data.price}}</p>
     </div>
-
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-6 gridImga" *ngFor="let product of productsModel" style=" padding-top: 8px;">
-          <div class="imgs">
-            <img [src]="product.adsImageName" class="img-responsive">
-            fluid-imgss
-          </div>
-        </div>
-        <div class="col-md-6">
-        </div>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-<div class="promotion-Two">
+  </app-carousel-item>
+<!-- <div class="promotion-Two">
   <div class="container-fluid">
   <div class="nameCoverage">
       <h3 class="promotionName">{{promotionsModel[1]?.promotionTitle}}</h3>
@@ -54,4 +32,4 @@
     </div>
   </div>
 </div>
-</div>
+</div> -->
