--- a/src/app/product-management/product-list/product-list.component.html
+++ b/src/app/product-management/product-list/product-list.component.html
@@ -25,7 +25,7 @@
                     <div class="car-body">
                       <h4 class="listproName">{{ product.productName }}</h4>
                       <div>
-                        <p class="listproPrize">? {{ product.price }}</p>  
+                        <p class="listproPrize"><span>&#x20B9;</span>{{ product.price }}</p>  
                       </div>
                     </div>
                   <div class="but-cart" >
