--- a/src/app/product-management/shopping-cart/shopping-cart.component.html
+++ b/src/app/product-management/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,7 @@
           <div class="three">
             <h4 class="product-name"><strong>{{data?.productName }}</strong></h4>
             <h4><small>{{data?.productDescription}}</small></h4>
-            <h4><small>{{data?.price}} ₹ </small></h4>
+            <h4><small><span>&#x20B9;</span>{{data?.price}} </small></h4>
           </div>
         </div>
         <!---details End-->
