--- a/src/app/home/promotion1/promotion1.component.html
+++ b/src/app/home/promotion1/promotion1.component.html
@@ -1,4 +1,4 @@
-<div class="promotion-One"> 
+<!-- <div class="promotion-One"> 
   <div class="container-fluid">
     <div class="nameCoverag">
   <h3 class="promotionNam">{{promotionsModel[0]?.promotionTitle}}</h3>
@@ -15,8 +15,22 @@
       </div>
     </div>
   </div> 
-</div>
+</div> -->
 
+
+<div class="p-2 subHeader" > <div class="nameCoverage">
+    <h3 class="promotionName">{{promotionsModel[0]?.promotionTitle}}</h3>
+</div><span></span></div>
+<div class="row parent">
+  <app-carousel-item>
+   <div appCarouselItem class="col-md-3 col-lg-3 col-xl-3 col-6" 
+    *ngFor="let data of promotionsModel[0]?.joinedtable">
+    <a (click)="detailView(data._id)"><img [src]="data.productImageName[0]" class="img-fluid"></a>
+      <p>{{data.productName}}</p>
+      <p><span>&#x20B9;</span>{{data.price}}</p>
+    </div>
+  </app-carousel-item>
+</div>
 <!-- <div *ngFor="let promotion of promotionsModel">
   <h3 class="our-h1">
     {{promotion.promotionTitle}}
