--- a/src/app/product-management/product-detail-view/product-detail-view.component.html
+++ b/src/app/product-management/product-detail-view/product-detail-view.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-6 col-6">
         <label style="white-space: pre-line; line-height: 20px" *ngIf="productModel?.price !== ''">
-          ? {{productModel?.price}}
+            <span>&#x20B9;</span>{{productModel?.price}}
         </label>
       </div>
       <div class="col-md-4 col-6">
